<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tic Tac Toe</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_tic_tac_toe">TicTacToe</string>
    <string name="marker_X">X</string>
    <string name="marker_O">O</string>
    <string name="new_game">Vs. Computer</string>
    <string name="human"> Vs. Human</string>
    <string name="main_menu">Main Menu</string>
    <string name="draw">Draw! Game Over!</string>
    <string name="Welcome">Let\'s Play Tic Tac Toe!</string>
    <string name="title_activity_vs_human3x3">vsHuman3x3</string>
    <string name="title_activity_vs_computer4x4">VsComputer4x4</string>
    <string name="vsComputer4x4">4 x 4 Vs. Computer</string>
    <string name="title_activity_human4x4">Human4x4</string>
    <string name="human4x4">4 x 4 Vs. Human</string>
    <string name="gameOver">Game over! \u0020 </string>
    <string name="isthewinner">\u0020 is the winner!</string>
    <string name="title_activity_vs_computer">VsComputer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_vs_human">VsHuman</string>

</resources>
