<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/linearLayout"
    android:layout_alignParentBottom="false"
    android:layout_alignParentRight="false"
    android:layout_alignParentEnd="true"
    android:background="#ffffffff"
    android:baselineAligned="true"
    android:gravity="bottom">

    <TextView
        android:text="@string/Welcome"
        android:id="@+id/MMText"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#33B5E5"
        android:textSize="56sp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:gravity="center" />

    <Button
        android:text="@string/new_game"
        android:id="@+id/vscomputer"
        android:onClick="vsComputer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:textColor="#ff3f3f3f"
        android:background="#97dadada"
        android:textStyle="bold"
        android:textSize="30sp"
        android:typeface="sans" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/human"
        android:id="@+id/vshuman"
        android:onClick="vsHuman"
        android:textColor="#ff3f3f3f"
        android:background="#97dadada"
        android:textStyle="bold"
        android:textSize="30sp"
        android:typeface="sans"
        android:layout_marginTop="1dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/vsComputer4x4"
        android:id="@+id/vsComputer4x4"
        android:onClick="vsComputer4x4"
        android:textColor="#ff3f3f3f"
        android:background="#97dadada"
        android:textStyle="bold"
        android:textSize="30sp"
        android:typeface="sans"
        android:layout_marginTop="1dp" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/human4x4"
        android:id="@+id/vshuman4x4"
        android:onClick="vsHuman4x4"
        android:textColor="#ff3f3f3f"
        android:background="#97dadada"
        android:textStyle="bold"
        android:textSize="30sp"
        android:typeface="sans"
        android:layout_marginTop="1dp" />

</LinearLayout>